feature: PlaceFinder v:0.2 sendPhoto